Changed cursor for screen to text. Made the textbox smaller to stop numbers from overflowing outside of screen.

--- a/styleme.css
+++ b/styleme.css
@@ -23,12 +23,13 @@ body {
     border: 0px solid transparent;
     box-shadow: inset 0.3px 0.3px 4px 3px #000000;
     z-index: 1;
+    cursor: text;
 }
 
 .input-box {
     font-family: 'Orbitron', sans-serif;
     background-color: transparent;
-    width: 527px;
+    width: 486px;
     height: 100%;
     outline: none;
     outline-style: none;
